--- a/glTest.vcxproj.filters
+++ b/glTest.vcxproj.filters
@@ -146,5 +146,8 @@
     <ClInclude Include="ScreenConstraints.h">
       <Filter>Arquivos de Origem</Filter>
     </ClInclude>
+    <ClInclude Include="utils2.h">
+      <Filter>Arquivos de Cabeçalho</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
